// Vitest Snapshot v1

exports[`should > emits 1`] = `
"
<template>
    <div>
      <p>{{ text }}</p>
      <button @click=\\"$emit('accepted')\\">
        OK
      </button>
    </div>
</template>

<script setup lang=\\"ts\\">
import { defineEmits } from 'vue'
const emit = defineEmit(['accepted'])
function accept() {
  emit('accepted')
}
</script>
"
`;

exports[`should > props 1`] = `
"
<script setup lang=\\"ts\\">
import { defineProps } from 'vue'
const props = defineProps({
  width: {
    type: Number,
    default: 446,
  },
  title: {
    type: String,
    default: '',
  },
})
</script>
"
`;

exports[`should > setup 1`] = `
"
<script setup lang=\\"ts\\">
import { reactive,ref,defineProps,defineEmits } from 'vue'
import Hello from 'hello.vue'
const props = defineProps({
  width: {
    type: Number,
    default: 446,
  },
  title: {
    type: String,
    default: '',
  },
})
const emit = defineEmit(['accepted'])
const a = ref(1)
const b = reactive([])

function fn() {
  return 1
}

function accept() {
  emit('accepted')
}
</script>
"
`;
